--- a/slides/05-supervised-tree-slides.html
+++ b/slides/05-supervised-tree-slides.html
@@ -126,7 +126,7 @@
     }
   </style>
 <meta property="og:title" content="Supervisée – STT-2200: Analyse de données">
-<meta property="og:description" content="Arbres">
+<meta property="og:description" content="Arbres de décision">
 <meta property="og:site_name" content="STT-2200: Analyse de données">
 </head>
 <body class="quarto-light">
@@ -135,7 +135,7 @@
 
 <section id="title-slide" class="quarto-title-block center">
   <h1 class="title">Supervisée</h1>
-  <p class="subtitle">Arbres</p>
+  <p class="subtitle">Arbres de décision</p>
 
 <div class="quarto-title-authors">
 <div class="quarto-title-author">
@@ -145,169 +145,235 @@ Steven Golovkine
 </div>
 </div>
 
-  <p class="date">30 oct. 2025</p>
+  <p class="date">31 oct. 2025</p>
   <figure>
     <center>
       <img src="../include/logo-ul.png" alt="logo" width="40%">
     </center>
   </figure>
 </section>
-<section>
-<section id="arbres-de-décision-cart" class="title-slide slide level1 center">
-<h1>Arbres de décision (CART)</h1>
-
+<section id="plan" class="slide level2">
+<h2>Plan</h2>
+<p><br></p>
+<ol type="1">
+<li><p>La théorie des arbres de décision</p></li>
+<li><p>Les arbres en pratique</p></li>
+<li><p>Exemple</p></li>
+</ol>
 </section>
-<section id="introduction" class="slide level2">
-<h2>Introduction</h2>
-<ul>
-<li class="fragment"><strong>CART</strong>: Classification And Regression Trees</li>
-<li class="fragment"><strong>Méthode d’apprentissage supervisée</strong></li>
-<li class="fragment"><strong>Classification</strong>: Prédire l’appartenance à l’un des <span class="math inline">\(K\)</span> groupes</li>
-<li class="fragment"><strong>Régression</strong>: Prédire une variable numérique continue <span class="math inline">\(Y\)</span></li>
-<li class="fragment"><strong>Variables</strong>: <span class="math inline">\(X_1, \ldots, X_p\)</span> avec <span class="math inline">\(n\)</span> observations dans <span class="math inline">\(\mathbb{R}^p\)</span></li>
-</ul>
+<section id="cart" class="slide level2">
+<h2>CART</h2>
+<p><br></p>
+<p>Variables : <span class="math inline">\(X_1, \ldots, X_p\)</span> avec <span class="math inline">\(n\)</span> observations dans <span class="math inline">\(\mathbb{R}^p\)</span>.</p>
+<div class="fragment">
+<p><br></p>
+<p>Classification : Prédire l’appartenance à l’un des <span class="math inline">\(K\)</span> groupes.</p>
+</div>
+<div class="fragment">
+<p><br></p>
+<p>Régression : Prédire une variable numérique continue <span class="math inline">\(Y\)</span>.</p>
+</div>
 </section>
 <section id="objectif-principal" class="slide level2">
 <h2>Objectif principal</h2>
+<p><br></p>
+<p>Partitionner l’espace des observations <span class="math inline">\(\mathbb{R}^p\)</span> en sous-ensembles homogènes.</p>
+</section>
+<section id="algorithme-récursif-de-découpage-binaire" class="slide level2">
+<h2>Algorithme récursif de découpage binaire</h2>
+<p><br></p>
+<p>Découper selon une variable <span class="math inline">\(X_j\)</span> à un seuil <span class="math inline">\(s\)</span>.</p>
 <div class="fragment">
-<p><strong>Partitionner l’espace des observations</strong> <span class="math inline">\(\mathbb{R}^p\)</span> en sous-ensembles homogènes</p>
+<p><br></p>
+<p>Créer des sous-régions rectangulaires (hyper-rectangles).</p>
 </div>
 <div class="fragment">
-<p><strong>Algorithme récursif de découpage binaire</strong> 1. Découper selon une variable <span class="math inline">\(X_j\)</span> à un seuil <span class="math inline">\(s\)</span> 2. Créer des sous-régions rectangulaires (hyper-rectangles) 3. Chaque sous-ensemble = une <strong>feuille</strong> avec une prédiction</p>
+<p><br></p>
+<p>Chaque sous-ensemble = une feuille avec une prédiction.</p>
 </div>
 <div class="fragment">
-<p><strong>Prédiction par feuille</strong> - <strong>Classification</strong>: Classe majoritaire - <strong>Régression</strong>: Moyenne des <span class="math inline">\(Y\)</span></p>
+<p><br></p>
+<p>⚠️ Algorithme glouton: Optimisation locale, pas globale !</p>
 </div>
 </section>
-<section id="principe-de-lalgorithme" class="slide level2">
-<h2>Principe de l’algorithme</h2>
+<section id="prédiction-par-feuille" class="slide level2">
+<h2>Prédiction par feuille</h2>
+<p><br></p>
+<p>Classification : Classe majoritaire</p>
+<div class="fragment">
+<p><br></p>
+<p>Régression : Moyenne des <span class="math inline">\(Y\)</span></p>
+</div>
+</section>
+<section id="algorithme" class="slide level2">
+<h2>Algorithme</h2>
+<p><br></p>
+<p>Point de départ: L’ensemble complet des observations</p>
+<div class="fragment">
+<p>Pour chaque nœud:</p>
 <ol type="1">
-<li class="fragment"><strong>Découpage</strong> selon <span class="math inline">\(X_j \leq s\)</span> vs <span class="math inline">\(X_j &gt; s\)</span></li>
-<li class="fragment"><strong>Choix optimal</strong> de <span class="math inline">\((X_j, s)\)</span> maximisant le <strong>critère d’homogénéité</strong></li>
-<li class="fragment"><strong>Répétition</strong> jusqu’au <strong>critère d’arrêt</strong></li>
-<li class="fragment"><strong>Prédiction unique</strong> par feuille pour toutes les observations</li>
+<li class="fragment"><p>Évaluer tous les couples <span class="math inline">\((X_j, s)\)</span> possibles.</p></li>
+<li class="fragment"><p>Calculer la réduction du critère d’homogénéité.</p></li>
+<li class="fragment"><p>Sélectionner le couple <span class="math inline">\((X_j, s)\)</span> qui maximise le gain.</p></li>
+<li class="fragment"><p>Diviser le nœud selon <span class="math inline">\(X_j \leq s\)</span> vs <span class="math inline">\(X_j &gt; s\)</span>.</p></li>
+<li class="fragment"><p>Répéter jusqu’au critère d’arrêt.</p></li>
 </ol>
-<div class="fragment">
-<p>⚠️ <strong>Algorithme glouton</strong>: Optimisation locale, pas globale !</p>
 </div>
 </section>
-<section id="algorithme-détaillé" class="slide level2">
-<h2>Algorithme détaillé</h2>
+<section id="critères-dhomogénéité" class="slide level2">
+<h2>Critères d’homogénéité</h2>
+<p><br></p>
+<p>Soit <span class="math inline">\(\widehat{p}_{jk}\)</span> la proportion d’observations de la région <span class="math inline">\(R_j\)</span> appartenant à la classe <span class="math inline">\(k\)</span>.</p>
 <div class="fragment">
-<p><strong>Pour chaque nœud:</strong></p>
+<p><br></p>
+<p>Taux d’erreur de classification</p>
+<p><span class="math display">\[E_j = 1 - \max_k \widehat{p}_{jk}\]</span></p>
 </div>
-<ol type="1">
-<li class="fragment"><strong>Évaluer</strong> tous les couples <span class="math inline">\((X_j, s)\)</span> possibles</li>
-<li class="fragment"><strong>Calculer</strong> la réduction du critère d’homogénéité</li>
-<li class="fragment"><strong>Sélectionner</strong> le couple qui maximise le gain</li>
-<li class="fragment"><strong>Diviser</strong> le nœud selon <span class="math inline">\(X_j \leq s\)</span> vs <span class="math inline">\(X_j &gt; s\)</span></li>
-<li class="fragment"><strong>Répéter</strong> jusqu’aux critères d’arrêt</li>
-</ol>
 <div class="fragment">
-<p><strong>Point de départ</strong>: L’ensemble complet des observations</p>
+<p>Facile à interpréter.</p>
+<p>Peu sensible → rarement utilisé pour la construction.</p>
 </div>
 </section>
-<section id="critères-dhomogénéité---classification" class="slide level2">
-<h2>Critères d’homogénéité - Classification</h2>
-<p>Soit <span class="math inline">\(\widehat{p}_{jk}\)</span> la proportion d’observations de la région <span class="math inline">\(R_j\)</span> appartenant à la classe <span class="math inline">\(k\)</span></p>
+<section id="critères-dhomogénéité-1" class="slide level2">
+<h2>Critères d’homogénéité</h2>
+<p><br></p>
+<p>Soit <span class="math inline">\(\widehat{p}_{jk}\)</span> la proportion d’observations de la région <span class="math inline">\(R_j\)</span> appartenant à la classe <span class="math inline">\(k\)</span>.</p>
+<p><br></p>
+<p>Indice de Gini (le plus utilisé)</p>
+<p><span class="math display">\[G_j = \sum_{k=1}^{K} \widehat{p}_{jk}(1 - \widehat{p}_{jk})\]</span></p>
 <div class="fragment">
-<p><strong>1. Taux d’erreur de classification</strong> <span class="math display">\[E_j = 1 - \max_k \widehat{p}_{jk}\]</span> - Facile à interpréter - Peu sensible → rarement utilisé pour la construction</p>
+<p>Minimal (<span class="math inline">\(= 0\)</span>) quand homogénéité parfaite.</p>
+<p>On cherche un indice faible.</p>
 </div>
 </section>
-<section id="critères-dhomogénéité-suite" class="slide level2">
-<h2>Critères d’homogénéité (suite)</h2>
+<section id="critères-dhomogénéité-2" class="slide level2">
+<h2>Critères d’homogénéité</h2>
+<p><br></p>
+<p>Soit <span class="math inline">\(\widehat{p}_{jk}\)</span> la proportion d’observations de la région <span class="math inline">\(R_j\)</span> appartenant à la classe <span class="math inline">\(k\)</span>.</p>
+<p><br></p>
+<p>Entropie croisée (théorie de l’information)</p>
+<p><span class="math display">\[D_j = -\sum_{k=1}^{K} \widehat{p}_{jk} \log(\widehat{p}_{jk})\]</span></p>
 <div class="fragment">
-<p><strong>2. Indice de Gini</strong> (le plus utilisé) <span class="math display">\[G_j = \sum_{k=1}^{K} \widehat{p}_{jk}(1 - \widehat{p}_{jk})\]</span> - Minimal (<span class="math inline">\(= 0\)</span>) quand homogénéité parfaite - On cherche un indice faible</p>
-</div>
-<div class="fragment">
-<p><strong>3. Entropie croisée</strong> (théorie de l’information) <span class="math display">\[D_j = -\sum_{k=1}^{K} \widehat{p}_{jk} \log(\widehat{p}_{jk})\]</span> - Basé sur Shannon - Minimal pour classe parfaitement prédite</p>
+<p>Basé sur l’information de Shannon.</p>
+<p>Minimal pour classe parfaitement prédite.</p>
 </div>
 </section>
 <section id="gain-dinformation" class="slide level2">
 <h2>Gain d’information</h2>
+<p><br></p>
+<p>Mesure de la réduction de l’hétérogénéité après division.</p>
 <div class="fragment">
-<p><strong>Mesure de l’amélioration</strong> après division</p>
+<p>Objectif : Maximiser le gain d’information.</p>
 </div>
 <div class="fragment">
-<p><strong>Exemple avec l’indice de Gini:</strong> <span class="math display">\[\Delta G = G_{\text{avant}} - \left(\frac{n_1}{n} G_1 + \frac{n_2}{n} G_2\right)\]</span></p>
-<p>où: - <span class="math inline">\(n_1, n_2\)</span> : nombres d’observations dans les sous-ensembles - <span class="math inline">\(n = n_1 + n_2\)</span></p>
-</div>
-<div class="fragment">
-<p><strong>Objectif</strong>: Maximiser le gain d’information</p>
+<p>Exemple avec l’indice de Gini:</p>
+<p><span class="math display">\[\Delta G = G_{\text{avant}} - \left(\frac{n_1}{n} G_1 + \frac{n_2}{n} G_2\right)\]</span></p>
+<p>où:</p>
+<ul>
+<li><p><span class="math inline">\(n_1, n_2\)</span> : nombres d’observations dans les sous-ensembles</p></li>
+<li><p><span class="math inline">\(n = n_1 + n_2\)</span></p></li>
+</ul>
 </div>
 </section>
-<section id="problème-du-sur-ajustement" class="slide level2">
-<h2>Problème du sur-ajustement</h2>
+<section id="problème-de-lajustement" class="slide level2">
+<h2>Problème de l’ajustement</h2>
+<p><br></p>
+<p>Dilemme:</p>
+<ul>
+<li><p>Arbre trop profond → Sur-ajustement aux données d’apprentissage</p></li>
+<li><p>Arbre trop simple → Sous-ajustement, classification trop simpliste</p></li>
+</ul>
 <div class="fragment">
-<p><strong>Dilemme</strong> - <strong>Arbre trop profond</strong> → Sur-ajustement aux données d’apprentissage - <strong>Arbre trop simple</strong> → Sous-ajustement, classification trop simpliste</p>
+<p>Conséquence → Perte de capacité de généralisation à de nouvelles données.</p>
 </div>
 <div class="fragment">
-<p><strong>Conséquence</strong> Perte de capacité de généralisation à de nouvelles données</p>
-</div>
-<div class="fragment">
-<p><strong>Solution</strong>: Élagage (<em>pruning</em>)</p>
+<p>Solution → Élagage (<em>pruning</em>)</p>
 </div>
 </section>
 <section id="élagage-de-larbre" class="slide level2">
 <h2>Élagage de l’arbre</h2>
+<p><br></p>
+<p>Stratégie en deux temps :</p>
+<ol type="1">
+<li><p>Croissance complète jusqu’aux feuilles pures</p></li>
+<li><p>Élagage des branches peu performantes</p></li>
+</ol>
 <div class="fragment">
-<p><strong>Stratégie en deux temps:</strong> 1. <strong>Croissance complète</strong> jusqu’aux feuilles pures 2. <strong>Élagage</strong> des branches peu performantes</p>
-</div>
-<div class="fragment">
-<p><strong>Critère coût-complexité</strong> <span class="math display">\[\sum_{j=1}^{|T|} c_j + \alpha |T|\]</span></p>
-<p>où: - <span class="math inline">\(|T|\)</span> : nombre de feuilles - <span class="math inline">\(c_j\)</span> : coût dans la feuille <span class="math inline">\(j\)</span> - <span class="math inline">\(\alpha\)</span> : paramètre de régularisation</p>
+<p>Critère coût-complexité :</p>
+<p><span class="math display">\[\sum_{j=1}^{|T|} c_j + \alpha |T|\]</span></p>
+<p>où <span class="math inline">\(|T|\)</span> est le nombre de feuilles, <span class="math inline">\(c_j\)</span> est le coût dans la feuille <span class="math inline">\(j\)</span> et <span class="math inline">\(\alpha\)</span> est un paramètre de régularisation.</p>
 </div>
 </section>
 <section id="choix-du-paramètre-α" class="slide level2">
 <h2>Choix du paramètre α</h2>
+<p><br></p>
+<p>Interprétation</p>
+<ul>
+<li><p><span class="math inline">\(\alpha\)</span> élevé → Favorise les arbres simples</p></li>
+<li><p><span class="math inline">\(\alpha\)</span> faible → Arbres plus complexes</p></li>
+</ul>
 <div class="fragment">
-<p><strong>Interprétation</strong> - <span class="math inline">\(\alpha\)</span> élevé → Favorise les arbres simples - <span class="math inline">\(\alpha\)</span> faible → Arbres plus complexes</p>
-</div>
-<div class="fragment">
-<p><strong>Méthode de sélection</strong> Validation croisée pour comparer les performances sur différentes valeurs de <span class="math inline">\(\alpha\)</span></p>
+<p>Méthode de sélection → Validation croisée pour comparer les performances sur différentes valeurs de <span class="math inline">\(\alpha\)</span></p>
 </div>
 </section>
 <section id="avantages-des-arbres" class="slide level2">
 <h2>Avantages des arbres</h2>
-<ul>
-<li class="fragment"><strong>Très interprétables</strong> : Chemin explicite pour chaque prédiction</li>
-<li class="fragment"><strong>Robustes</strong> aux valeurs extrêmes et transformations monotones</li>
-<li class="fragment"><strong>Gestion naturelle</strong> des interactions entre variables</li>
-<li class="fragment"><strong>Variables mixtes</strong> : Quantitatives et qualitatives</li>
-<li class="fragment"><strong>Aucune hypothèse</strong> sur la distribution des données</li>
-<li class="fragment"><strong>Sélection automatique</strong> des variables importantes</li>
-<li class="fragment"><strong>Base</strong> de méthodes modernes (forêts aléatoires, boosting)</li>
-</ul>
+<p><br></p>
+<p>Très interprétables : Chemin explicite pour chaque prédiction.</p>
+<div class="fragment">
+<p>Robustes aux valeurs extrêmes et transformations monotones.</p>
+</div>
+<div class="fragment">
+<p>Gestion naturelle des interactions entre variables.</p>
+</div>
+<div class="fragment">
+<p>Variables mixtes : Quantitatives et qualitatives.</p>
+</div>
+<div class="fragment">
+<p>Aucune hypothèse sur la distribution des données.</p>
+</div>
+<div class="fragment">
+<p>Sélection automatique des variables importantes.</p>
+</div>
+<div class="fragment">
+<p>Base des méthodes modernes (forêts aléatoires, boosting).</p>
+</div>
 </section>
 <section id="limites-des-arbres" class="slide level2">
 <h2>Limites des arbres</h2>
+<p><br></p>
+<p>Instabilité : Sensibles aux petites modifications des données</p>
+<div class="fragment">
+<p>Performance limitée seuls, surtout avec données bruitées.</p>
+</div>
+<div class="fragment">
+<p>Divisions rectangulaires inadaptées aux frontières non-linéaires.</p>
+</div>
+<div class="fragment">
+<p>Tendance au sur-ajustement sans élagage.</p>
+</div>
+<div class="fragment">
+<p>Sensibilité au déséquilibre des classes.</p>
+</div>
+<div class="fragment">
+<p>Solution : Méthodes ensemblistes (forêts, boosting).</p>
+</div>
+</section>
+<section id="conclusion" class="slide level2">
+<h2>Conclusion</h2>
+<p><br></p>
+<p>Les arbres :</p>
 <ul>
-<li class="fragment"><strong>Instabilité</strong> : Sensibles aux petites modifications des données</li>
-<li class="fragment"><strong>Performance limitée</strong> seuls, surtout avec données bruitées</li>
-<li class="fragment"><strong>Divisions rectangulaires</strong> inadaptées aux frontières non-linéaires</li>
-<li class="fragment"><strong>Tendance au sur-ajustement</strong> sans élagage</li>
-<li class="fragment"><strong>Sensibilité</strong> au déséquilibre des classes</li>
-<li class="fragment"><strong>Solution</strong> : Méthodes ensemblistes (forêts, boosting)</li>
+<li><p>Méthode de partitionnement récursif</p></li>
+<li><p>Algorithme glouton simple et intuitif</p></li>
+<li><p>Nécessitent un élagage pour éviter le sur-ajustement</p></li>
 </ul>
-</section>
-<section id="récapitulatif" class="slide level2">
-<h2>Récapitulatif</h2>
 <div class="fragment">
-<p><strong>Les arbres CART</strong> - Méthode de partitionnement récursif - Algorithme glouton simple et intuitif - Nécessitent un élagage pour éviter le sur-ajustement</p>
-</div>
-<div class="fragment">
-<p><strong>Usage recommandé</strong> - Excellents pour l’interprétabilité - Meilleurs en combinaison (méthodes ensemblistes) - Première approche pour comprendre les données</p>
-</div>
-</section>
-<section id="merci-pour-votre-attention" class="slide level2">
-<h2>Merci pour votre attention</h2>
-<p><strong>Questions ?</strong></p>
-<div class="fragment">
-<p><em>Les arbres de décision : simplicité, interprétabilité et fondement des méthodes ensemblistes</em></p>
-</div>
+<p>Prochaine étape → Les modèles ensemblistes</p>
 
 
-</section></section>
+</div>
+</section>
     </div>
   <div class="quarto-auto-generated-content" style="display: none;">
 <div class="footer footer-default">
